# dbcan4-advanced

./: .gitignore  .readthedocs.yaml  LICENSE  PRODUCT.md  README.md  REPRODUCE.md  REPRODUCE_PRODUCT.md  alembic.ini  capture_ui.sh  dbcan4_workup.sh  environment.yml  met_env_freeze.txt  mkdocs.yml  pyproject.toml
benchmarks/: README.md  allmethods_rescored.json  baseline_comparison.tsv  dbcan2024_eval2025_scored.json  dbcan2025_eval2025_rescored.json  dbcan_db_2024_vs_2025_comparison.tsv  dbcan_eval2025_scored.json  dbcan_tiers_scored.json  diamond_eval2025_summary.json  domain_extraction_summary.json  domain_retrieval_multidomain_eval.tsv  domain_retrieval_summary.json  esmc_retrieval_summary.json  eval_2025_labels.tsv  foldseek_pred.tsv  foldseek_structure_subset_scored.json  foldseek_summary.json  fusion_abstention_analysis.json  fusion_summary.json  gate_calibration.json  gate_grayzone_adjudication.json  gate_operating_points.tsv  head_metrics_allking.json  head_metrics_fungi.json  hmm2024_scored.json  master_benchmark.tsv  master_benchmark_v2.tsv  master_benchmark_v3.json  master_benchmark_v3.tsv  master_benchmark_v4_threelevel.tsv  novel_family_decomposition.json  novelty_auroc_corrected.json  novelty_stratification_corrected.json  novelty_summary.json  panelA_structure_subset.json  refscope_build_scale.json  refscope_cluster_scale.json  refscope_effects.tsv  refscope_embed_verify.json  refscope_threelevel_all.tsv  (+8 more)
db/alembic/: env.py
docs/: benchmark_report.md  cli.md  daily-log.md  design_dbcan4_advanced.md  domain_retrieval_report.md  env_setup.md  index.md  installation.md  output-contract.md  precision_gate_report.md  quickstart.md  requirements.txt  tools.md  troubleshooting.md  usage.md  webui.md
docs/gray_zone_structure_tier/: gray_zone_adjudicated_FINAL_corrected_4000sample.tsv  gray_zone_adjudicated_structure_validated.tsv  structure_evidence_scores_fixed_centroid.tsv  summary_gray_zone_families.tsv  summary_overall.json  summary_tier_by_class.tsv  synthesis_report.md  track_a_tiering_schema.md  track_b_structure_tier_report.md
docs/ui/: README.md
examples/: real3.faa
examples/267317_comprehensive/: 267317_comprehensive.json  267317_domains.json  build_comprehensive_page.py  build_comprehensive_poster.py  build_poster.py  build_structure_viewer.py  comprehensive_267317.html  evidence_provenance.tsv  foldseek_hits.json  render_structure_views.py  structure_viewer_267317.html
examples/ai_reports/: 169208_ai_report.json  267317_ai_report.json  267317_grounding_selftest.txt  602276_ai_report.json  README_ai_reports.md  validate_reports.py
nf/: OUTPUT_CONTRACT.md  README.md  TOOLS.md  main.nf  nextflow.config
nf/envs/: deeptmhmm.yml  engine.yml  foldseek.yml
nf/modules/: esmc.nf  (+5 more)
notebooks/: README.md
prototypes/: README.md  SYNTHESIS_REPORT.md
scripts/: README.md  build_ai_report.py  build_labeled_ref.py  build_reference.py  build_tiered_dataset.py  build_truth_slice.py  cazyme3d_mapping.py  cluster_ref_mmseqs.sh  daily_push.sh  diamond_baseline.py  embed_all_gpus.sh  embed_both_refs.sh  embed_esmc.py  esmatlas_coverage.py  extract_domains.py  extract_validation_sample.py  fetch_sample_sequences.py  fold_esmfold.py  foldseek_search.py  fusion_consensus.py  hmm_baseline_2024.py  infer_esmc.py  merge_tier.py  prostt5_validate.py  retrieval_esmc.py  sample_negatives.py  saprot_embed.py  select_fold_sets.py  setup_met_env.sh  structure_evidence_score.py  train_domain_retrieval.py  train_gate.py  train_heads.py  vendor_bioforge.sh
skills/: README.md
(+161 files in other folders)
