[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbcan4-advanced"
version = "0.1.0"
description = "dbCAN4-advanced: protein-language-model + structure CAZyme family annotation beyond HMMER/DIAMOND, for fungal proteins."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dbCAN4-advanced" }]
dependencies = [
    "numpy>=1.23",
    # --- vendored BioForge web UI + ingest layer (src/bioforge) ---
    # These make `git clone` alone enough to ingest a run and serve the web UI;
    # no second repository to fetch. See src/bioforge/VENDORED.md.
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pysam>=0.22",
]

[project.optional-dependencies]
# The pLM/structure engines pull heavy deps (torch, esm, foldseek). These are
# expected to already live in the project venv on met; listed here for a full
# from-scratch install.
engine = ["torch>=2.0"]
# Postgres backend for the web layer. The default is zero-setup SQLite, so
# psycopg2 is only needed if you point DATABASE_URL at a Postgres server.
web-postgres = ["psycopg2-binary>=2.9"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
dbcan4 = "dbcan4_advanced.cli:main"
# Vendored BioForge ingest console scripts (used by dbcan4_workup.sh --serve).
bioforge-ingest = "bioforge.ingest.cli:main"
bioforge-ingest-advanced = "bioforge.ingest.cli_advanced:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the Jinja templates + vendored static assets (3Dmol, CSS) INSIDE the
# bioforge package so even a non-editable wheel serves the web UI.
# (Upstream biodb omitted this, so only editable installs worked there.)
bioforge = ["api/templates/**/*", "api/static/**/*"]
# NOTE: the Nextflow pipeline (nf/), the Alembic migrations (db/alembic + alembic.ini),
# and the stage scripts (scripts/) live at the REPO ROOT, not under a src/ package, so
# they are resolved repo-relative at runtime (see src/dbcan4_advanced/config.py) rather
# than packaged. Install with `pip install -e .` (the documented path) so these are
# reachable; a non-editable wheel installs the Python packages + web UI but not the
# repo-root pipeline/migrations.

[tool.pytest.ini_options]
# Vendored BioForge web-layer tests (tests/bioforge) verify the ingest + API +
# GO/InterPro parsing against sample_data/. Run with: pip install -e ".[dev]" && pytest
pythonpath = ["src"]
testpaths = ["tests"]
